dyn type system impl

--- a/FillGame/TinyEngine/TinyEngine.vcxproj
+++ b/FillGame/TinyEngine/TinyEngine.vcxproj
@@ -162,11 +162,14 @@
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Interface.h" />
+    <ClInclude Include="ListLegacy.h" />
     <ClInclude Include="Loop.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjectListSample.h" />
     <ClInclude Include="Option.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="VectorLegacy.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="TinyEngine.h" />
@@ -177,6 +180,7 @@
     <ClCompile Include="GameManager.c" />
     <ClCompile Include="GameObject.c" />
     <ClCompile Include="Interface.c" />
+    <ClCompile Include="Object.c" />
     <ClCompile Include="pch.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
