--- a/FillGame/TinyEngine/TinyEngine.vcxproj.filters
+++ b/FillGame/TinyEngine/TinyEngine.vcxproj.filters
@@ -84,6 +84,15 @@
     <ClInclude Include="Box.h">
       <Filter>Header Files\Helper</Filter>
     </ClInclude>
+    <ClInclude Include="ListLegacy.h">
+      <Filter>Header Files\Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="VectorLegacy.h">
+      <Filter>Header Files\Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectListSample.h">
+      <Filter>Header Files\Helper</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.c">
@@ -108,6 +117,9 @@
       <Filter>Source Files\Object</Filter>
     </ClCompile>
     <ClCompile Include="GameObject.c">
+      <Filter>Source Files\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="Object.c">
       <Filter>Source Files\Object</Filter>
     </ClCompile>
   </ItemGroup>
