--- a/FillGame/TinyEngine/TinyEngine.vcxproj
+++ b/FillGame/TinyEngine/TinyEngine.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="GameObject.c" />
     <ClCompile Include="Interface.c" />
     <ClCompile Include="Object.c" />
+    <ClCompile Include="ObjectListSample.c" />
     <ClCompile Include="pch.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
