--- a/FillGame/TinyEngine/TinyEngine.vcxproj
+++ b/FillGame/TinyEngine/TinyEngine.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectListSample.h" />
     <ClInclude Include="Option.h" />
+    <ClInclude Include="OptionInt.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="VectorLegacy.h" />
@@ -182,6 +183,7 @@
     <ClCompile Include="Interface.c" />
     <ClCompile Include="Object.c" />
     <ClCompile Include="ObjectListSample.c" />
+    <ClCompile Include="OptionInt.c" />
     <ClCompile Include="pch.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
