--- a/TinyEngine/TinyEngine.vcxproj.filters
+++ b/TinyEngine/TinyEngine.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="ObjectListSample.h">
       <Filter>Header Files\Helper\TemplateModel</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectVectorSample.h">
+      <Filter>Header Files\Helper</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.c">
@@ -130,6 +133,9 @@
     </ClCompile>
     <ClCompile Include="ObjectListSample.c">
       <Filter>Source Files\Helper\TemplateModel</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectVectorSample.c">
+      <Filter>Source Files\Helper</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
