--- a/TinyEngine/TinyEngine.vcxproj
+++ b/TinyEngine/TinyEngine.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="Object.c" />
     <ClCompile Include="ObjectListSample.c" />
     <ClCompile Include="ObjectVectorSample.c" />
+    <ClCompile Include="Option.c" />
     <ClCompile Include="pch.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
