--- a/TinyEngine/TinyEngine.vcxproj.filters
+++ b/TinyEngine/TinyEngine.vcxproj.filters
@@ -105,6 +105,12 @@
     <ClInclude Include="ObjectVectorSample.h">
       <Filter>Header Files\Helper\TemplateModel</Filter>
     </ClInclude>
+    <ClInclude Include="Mathf.h">
+      <Filter>Header Files\Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="OOPTool.h">
+      <Filter>Header Files\Helper</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.c">
@@ -141,6 +147,12 @@
       <Filter>Source Files\Helper\TemplateModel</Filter>
     </ClCompile>
     <ClCompile Include="Option.c">
+      <Filter>Source Files\Helper</Filter>
+    </ClCompile>
+    <ClCompile Include="Mathf.c">
+      <Filter>Source Files\Helper</Filter>
+    </ClCompile>
+    <ClCompile Include="OOPTool.c">
       <Filter>Source Files\Helper</Filter>
     </ClCompile>
   </ItemGroup>
